[gd_scene load_steps=8 format=3 uid="uid://blgkyj1ogaecl"]

[ext_resource type="Script" uid="uid://ddoc1s56tjpbr" path="res://src/systems/utils/seamless_detector_v2.gd" id="1_t5ygt"]
[ext_resource type="Script" uid="uid://4dkyll6fxqod" path="res://src/systems/region/region.gd" id="2_m7xc5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7xc5"]
size = Vector2(480, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3xc3k"]
size = Vector2(480, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4sw1"]
size = Vector2(480, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjes7"]
size = Vector2(16, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tonw3"]
size = Vector2(16, 256)

[node name="seamless_detector_v2" type="Node2D" node_paths=PackedStringArray("up_collision", "down_collision", "right_collision", "left_collision", "up_bound", "down_bound", "right_bound", "left_bound", "loop_region")]
script = ExtResource("1_t5ygt")
up_collision = NodePath("loop_region/up_coll")
down_collision = NodePath("loop_region/down_coll")
right_collision = NodePath("loop_region/right_coll")
left_collision = NodePath("loop_region/left_coll")
up_bound = NodePath("loop_region/up_coll/square")
down_bound = NodePath("loop_region/down_coll/square")
right_bound = NodePath("loop_region/right_coll/square")
left_bound = NodePath("loop_region/left_coll/square")
loop_region = NodePath("loop_region")

[node name="loop_renders" type="Node2D" parent="."]
z_index = -1

[node name="loop_region" type="Area2D" parent="." node_paths=PackedStringArray("rect")]
collision_layer = 1073741824
collision_mask = 1073741824
script = ExtResource("2_m7xc5")
rect = NodePath("rect")

[node name="rect" type="CollisionShape2D" parent="loop_region"]
shape = SubResource("RectangleShape2D_m7xc5")
debug_color = Color(0.2, 0, 0.7, 0.2)

[node name="up_coll" type="StaticBody2D" parent="loop_region"]
position = Vector2(0, 136)
collision_mask = 2147483652

[node name="square" type="CollisionShape2D" parent="loop_region/up_coll"]
shape = SubResource("RectangleShape2D_3xc3k")
debug_color = Color(0.596078, 0.596078, 0.596078, 0.403922)

[node name="down_coll" type="StaticBody2D" parent="loop_region"]
position = Vector2(0, -136)
collision_mask = 2147483652

[node name="square" type="CollisionShape2D" parent="loop_region/down_coll"]
shape = SubResource("RectangleShape2D_x4sw1")
debug_color = Color(0.596078, 0.596078, 0.596078, 0.403922)

[node name="right_coll" type="StaticBody2D" parent="loop_region"]
position = Vector2(248, 0)
collision_mask = 2147483652

[node name="square" type="CollisionShape2D" parent="loop_region/right_coll"]
shape = SubResource("RectangleShape2D_pjes7")
debug_color = Color(0.596078, 0.596078, 0.596078, 0.403922)

[node name="left_coll" type="StaticBody2D" parent="loop_region"]
position = Vector2(-256, 0)
collision_mask = 2147483652

[node name="square" type="CollisionShape2D" parent="loop_region/left_coll"]
shape = SubResource("RectangleShape2D_tonw3")
debug_color = Color(0.596078, 0.596078, 0.596078, 0.403922)
